Bug 408045 - "Bit edit" checkboxes have uneven borders when desktop scaling is enabled
Summary: "Bit edit" checkboxes have uneven borders when desktop scaling is enabled
Status: RESOLVED FIXED
Alias: None
Product: kcalc
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.12
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Evan Teran
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2019-05-28 21:38 UTC by Lastique
Modified: 2019-07-10 21:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.0
Sentry Crash Report:


Attachments
KCalc with uneven Bit Edit checkbox borders (95.96 KB, image/png)
2019-05-28 21:38 UTC, Lastique
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lastique 2019-05-28 21:38:07 UTC
SUMMARY
When desktop scaling is enabled, "Bit edit" checkboxes have uneven border widths. See attached screenshot.

STEPS TO REPRODUCE
1. Go to KDE System Settings -> Display and Monitor -> Scale Display.
2. Select scale factor greater than 1.0. I used 1.7.
3. Reboot.
4. Launch KCalc. Make sure it is in Numerical System Mode and Show Bit Edit is enabled.

OBSERVED RESULT
Bit edit checkboxes have borders of uneven width, as if scaled using nearest neighbour filter.

EXPECTED RESULT
The checkboxes should be drawn according to the scaling factor, not scaled post-drawing. This would result in a more uniform look of the checkboxes.

SOFTWARE/OS VERSIONS
Linux: Kubuntu 19.04
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
KCalc: 18.12.3
Comment 1 Lastique 2019-05-28 21:38:56 UTC
Created attachment 120363 [details]
KCalc with uneven Bit Edit checkbox borders
Comment 2 Christoph Feck 2019-05-29 00:26:40 UTC
Enabling antialiasing in BitButton::paintEvent() should give better rendering with fractional scaling.

https://cgit.kde.org/kcalc.git/tree/kcalc_bitset.cpp#n42
https://doc.qt.io/qt-5/qpainter.html#rendering-quality
Comment 3 Christoph Feck 2019-07-10 21:36:57 UTC
Git commit 895a9731984b071027d85dfd59e703acb35c467c by Christoph Feck.
Committed on 10/07/2019 at 21:35.
Pushed by cfeck into branch 'master'.

Enable Antialiasing in bitset editor
FIXED-IN: 19.08.0

M  +1    -0    kcalc_bitset.cpp

https://commits.kde.org/kcalc/895a9731984b071027d85dfd59e703acb35c467c