Enable Antialiasing in bitset editor

BUG: 408045
FIXED-IN: 19.08.0